# experiment

./: .gitignore  .pnp.cjs  README.md  docker-compose.yml  package.json  pyproject.toml  tailwind.config.js
css/: styles.css
pages/: _app.js  index.js
